<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_title"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/title_quiz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">

            <TextView
                android:id="@+id/text_view_question_one"
                style="@style/QuestionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:text="@string/check_box_question" />

            <CheckBox
                android:id="@+id/check_box_answer_one"
                style="@style/AnswerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:onClick="onClick"
                android:text="@string/check_box_first_answer" />

            <CheckBox
                android:id="@+id/check_box_answer_two"
                style="@style/AnswerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:onClick="onClick"
                android:text="@string/check_box_second_answer" />

            <CheckBox
                android:id="@+id/check_box_answer_three"
                style="@style/AnswerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/check_box_third_answer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">

            <TextView
                android:id="@+id/text_view_question_two"
                style="@style/QuestionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:text="@string/radio_group_question" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_answer_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/icon_flag_48dp"
                    android:onClick="onClick" />

                <RadioButton
                    android:id="@+id/radio_answer_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/icon_android_48dp"
                    android:onClick="onClick" />

                <RadioButton
                    android:id="@+id/radio_answer_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/icon_plane_48dp"
                    android:onClick="onClick" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">

            <TextView
                android:id="@+id/text_view_question_three"
                style="@style/QuestionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_first_question" />

            <EditText
                android:id="@+id/edit_text_answer_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_hint_answer"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">

            <TextView
                android:id="@+id/text_view_question_four"
                style="@style/QuestionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_text_second_question" />

            <EditText
                android:id="@+id/edit_text_answer_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_text_hint_answer"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/button_result"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:onClick="submitResult"
            android:text="@string/button_result_text" />
    </LinearLayout>
</ScrollView>